# TeachBooks-Favourites

./: CODEOWNERS  README.md  WAIVER.txt  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: python-publish.yml  tag_on_dependabot.yml
src/teachbooks_favorites/: __init__.py
src/teachbooks_favourites/: __init__.py
