[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teachbooks-favourites"
dynamic=["version"]
description = "A collection of our favourite Sphinx extensions for use in JupyterBooks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dennis den Ouden-van der Horst", email = "d.denouden-vanderhorst@tudelft.nl" }
]
dependencies = [
    "sphinx",
    "sphinx-thebe @ git+https://github.com/TeachBooks/Sphinx-Thebe",
    "jupyterbook-patches==v1.9.0",
    "download-link-replacer==v1.0.4",
    "sphinx-image-inverter==v1.1.9",
    "teachbooks-sphinx-tippy==v1.0.13",
    # waiting for merge of https://github.com/executablebooks/sphinx-exercise/pull/75,
    "sphinx-exercise @ git+https://github.com/TeachBooks/sphinx-exercise.git",
    "sphinx-iframes==v1.0.7",
    "sphinx-named-colors==v1.0.2",
    "sphinx-dropdown-toggle==v1.3.1",
    # waiting for merge of https://github.com/executablebooks/sphinx-togglebutton/pull/66,
    "sphinx-togglebutton @ git+https://github.com/TeachBooks/sphinx-togglebutton.git",
    # waiting for merge of https://github.com/executablebooks/sphinx-proof/pull/146,
    "sphinx-proof @ git+https://github.com/TeachBooks/sphinx-proof.git",
    "sphinx-code-examples==v1.2.1",
    "sphinx-accessibility==v1.0.1",
    "sphinx-nb-execution-patterns==v1.0.0",
    "sphinx-launch-buttons==v1.0.5"
]

requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/teachbooks_favourites/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
