[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "teachbooks-favourites"
dynamic=["version"]
description = "A collection of our favourite Sphinx extensions for use in JupyterBooks."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "Dennis den Ouden-van der Horst", email = "d.denouden-vanderhorst@tudelft.nl" }
]
dependencies = [
    "sphinx",
    "sphinx-thebe @ git+https://github.com/TeachBooks/Sphinx-Thebe@2a01955",
    "jupyterbook-patches==v1.11.4",
    "download-link-replacer==v1.0.6",
    "sphinx-image-inverter==v1.1.11",
    "teachbooks-sphinx-tippy==v1.0.15",
    "sphinx-exercise==1.2.1",
    "sphinx-iframes==v1.2.0",
    "sphinx-named-colors==v1.0.3",
    "sphinx-dropdown-toggle==v1.3.1",
    # waiting for merge of https://github.com/executablebooks/sphinx-togglebutton/pull/66,
    "sphinx-togglebutton @ git+https://github.com/TeachBooks/sphinx-togglebutton@7af7c7b",
    "sphinx-proof==0.3.0",
    "sphinx-code-examples==v1.2.1",
    "sphinx-accessibility==v1.0.1",
    "sphinx-nb-execution-patterns==v1.0.0",
    "sphinx-launch-buttons==v1.0.6",
    # waiting for merge of https://github.com/executablebooks/sphinx-external-toc/pull/112,
    "sphinx_external_toc @ git+https://github.com/TeachBooks/sphinx-external-toc@e280561",
    "sphinx-github-alerts==v1.0",
    "sphinx-metadata-figure==v1.2.2"
]

requires-python = ">=3.10"

[tool.hatch]
version.source = "vcs"
build.hooks.vcs.version-file = "src/teachbooks_favourites/_version.py"

[tool.hatch.metadata]
allow-direct-references = true
